requested PR changes and added email field to the jwt token
